Archive/b37f3eb19e5368970245b5e689040a76-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘void test_template()’:
main.cpp:73:6: error: ‘C<int>’ is an ambiguous base of ‘Cz<int>’
  p[5]=new Cz<DATA_TYPE>();
      ^
